--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,9 +10,13 @@ body {
 }
 
 .header {
+  background-image: url('https://i.imgur.com/Sk4GwKE.jpg');
   grid-column: 1 / span 2;
   grid-row: first / span 1;
-  background-color: #061a1b;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  /* background-color: #061a1b; */
   color: white;
   display: flex;
   flex-direction: column;
@@ -29,8 +33,8 @@ body {
 .homeLink {
   font-family: 'Moon Dance', cursive;
   font-size: 90px;
-  margin: 240px 0 0 0;
-  /* font-weight: 900; */
+  margin: 190px 0 0 0;
+  /* color: #f77c96; */
 }
 
 .headerLinks {
@@ -44,7 +48,6 @@ body {
   color: white;
   margin: 23px;
   font-family: 'Barlow';
-  /* padding: 0 20px 0 0; */
   transition: .2s;
 }
 
@@ -57,10 +60,26 @@ body {
 .homePortraitDiv {
   grid-column: 3 / span 1;
   grid-row: first / span 2;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
+}
+
+.homePortrait {
+  background-image: url('https://i.imgur.com/4HAWH3s.jpg');
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  transition: .2s;
+  background-color: #061a1b;
+  border: none;
+  box-sizing: border-box
+}
+
+.homePortrait:hover {
+  background-image: url('https://i.imgur.com/TzWJA4e.jpeg');
+  transition: .2s;
 }
 
 .homeServicesDiv {
@@ -98,23 +117,25 @@ body {
   transition: .2s
 }
 
-.servicesLink:hover {
+.homeServicesDiv:hover .servicesLink {
   letter-spacing: 8px;
-  transition: .2s
+  transition: .2s;
+  color: #f77c96
 }
 
 .homeCardDiv {
-  grid-column: 1 / span 1;
+  grid-column: 2 / span 1;
   grid-row: second / span 3;
   background-color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 100%
 }
 
 .homeHoroscopeDiv {
-  grid-column: 2 / span 1;
+  grid-column: 1 / span 1;
   grid-row: second / span 3;
   background-color: #061a1b;
 }
@@ -154,9 +175,10 @@ body {
   transition: .2s
 }
 
-.bookingLink:hover {
+.homeBookingDiv:hover .bookingLink {
   letter-spacing: 8px;
-  transition: .2s
+  transition: .2s;
+  color: #f77c96
 }
 
 .homeReviewDiv {
@@ -172,9 +194,23 @@ body {
 }
 
 .homeRetrogradeDiv {
-  grid-column: 1 / span 4;
+  grid-column: 1 / span 2;
   grid-row: fifth / span 1;
-  background-color: lightblue;
+  background-color: #f77c96;
+  font-family: "barlow";
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.homeSocialDiv {
+  grid-column: 3 / span 2;
+  grid-row: fifth / span 1;
+  background-color: white;
+  font-family: "barlow";
+  color: black;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -187,12 +223,29 @@ body {
   .homeGrid {
     display: grid;
     grid-template-columns: [first] 25vw [second] 25vw [third] 25vw [fourth] 25vw[last-column];
-    grid-template-rows: [first] 20vh [second] 20vh [third] 20vh [fourth] 20vh [fifth] 20vh [sixth] 20vh [seventh] 20vh [eigth] 20vh [ninth] 20vh [tenth] 7vh[last-row];
+    grid-template-rows: [first] 20vh [second] 20vh [third] 20vh [fourth] 20vh [fifth] 20vh [sixth] 20vh [seventh] 20vh [eigth] 20vh [ninth] 20vh [tenth] 7vh [eleventh] 7vh [last-row];
+  }
+
+  .homePortrait {
+    background-image: url('https://i.imgur.com/TzWJA4e.jpeg');
+  }
+  
+  .homePortrait:hover {
+    background-image: url('https://i.imgur.com/4HAWH3s.jpg');
   }
   
   .header {
     grid-column: 1 / span 4;
     grid-row: first / span 1;
+    background-color: #061a1b;
+    background-image: none;
+  }
+
+  .homeLink {
+    font-family: 'Moon Dance', cursive;
+    font-size: 90px;
+    margin: 250px 0 0 0;
+    padding: 0 0 15px 0;
   }
   
   .homePortraitDiv {
@@ -228,7 +281,16 @@ body {
   .homeRetrogradeDiv {
     grid-column: 1 / span 4;
     grid-row: tenth / span 1;
-    background-color: lightblue
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    text-align: center;
+  }
+
+  .homeSocialDiv {
+    grid-column: 1 / span 4;
+    grid-row: eleventh / span 1;
   }
 }
 
@@ -280,9 +342,20 @@ body {
 }
 
 .pageRetrogradeDiv {
-  grid-column: 1 / span 4;
+  grid-column: 1 / span 2;
   grid-row: fifth / span 1;
-  background-color: lightblue;
+  background-color: #f77c96;
+  font-family: "barlow";
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.pageSocialDiv {
+  grid-column: 3 / span 2;
+  grid-row: fifth / span 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -292,6 +365,11 @@ body {
 /* MEDIA QUERY */
 
 @media only screen and (max-width: 1220px) {
+  .pageGrid {
+    display: grid;
+    grid-template-columns: [first] 25vw [second] 25vw [third] 25vw [fourth] 25vw[last-column];
+    grid-template-rows: [first] 20vh [second] 22.5vh [third] 22.5vh [fourth] 22.5vh [fifth] 6vh [sixth] 6vh [last-row];
+  }
   .pageHeader {
     grid-column: 1 / span 4;
     grid-row: first / span 1;
@@ -330,6 +408,21 @@ body {
     background-color: lavender;
     overflow-y: auto;
   }
+
+  .pageRetrogradeDiv {
+    grid-column: 1 / span 4;
+    grid-row: fifth / span 1;
+    background-color: #f77c96;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .pageSocialDiv {
+    grid-column: 1 / span 4;
+    grid-row: sixth / span 1;
+  }
 }
 
 /* HOROSCOPES */
@@ -344,7 +437,8 @@ body {
   justify-content: center;
   align-items: center;
   border: 1px solid white;
-  height: 100%
+  height: 100%;
+  box-sizing: border-box;
 }
 
 .horoscopeDiv {
@@ -362,6 +456,14 @@ body {
   font-size: 20px;
   text-transform: uppercase;
   border: 1px solid white;
+  z-index: 1;
+  transition: .2s;
+}
+
+.signButton:hover {
+  letter-spacing: 5px;
+  transition: .2s;
+  color: #f77c96
 }
 
 @media only screen and (max-width: 1220px) {
@@ -384,8 +486,10 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: white;
+  background-color: #061a1b;
   z-index: 2;
+  border: 2px solid white;
+  box-sizing: border-box;
 }
 
 .horoscopeDescription {
@@ -397,9 +501,28 @@ body {
   z-index: 3;
 }
 
-.signButtons {
-  z-index: 1;
+.horoscopeDescription {
+  font-family: "barlow";
+  text-align: justify;
+  font-size: 20px; 
+  color: white;
 }
+
+.horoscopeButton {
+  border: none;
+  background-color: #061a1b;
+  color: #f77c96;
+  font-family: "Moon Dance";
+  font-size: 50px;
+  margin: 500px 200px 0 200px;
+  transition: .2s;
+}
+
+.horoscopeButton:hover {
+  transition: .2s;
+  scale: 150%;
+}
+
 
 /* DAILY CARD */
 
@@ -408,6 +531,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 100%
 }
 
 .dailyCardImage {
@@ -415,19 +539,18 @@ body {
 }
 
 .dailyCardText {
-  width: 80%;
-  margin: 20px 0 0 0;
+  width: 75%;
+  /* margin: 20px 0 0 0; */
+  margin: 0;
+  font-family: "barlow";
+  text-align: justify;
+  font-size: 18px;
 }
 
 @media only screen and (max-width: 1220px) {
 
 .dailyCardImage {
   width: 80%
-}
-
-.dailyCardText {
-  width: 80%;
-  margin: 20px 0 0 0;
 }
 
 }
@@ -455,33 +578,32 @@ body {
   font-family: 'Barlow', cursive;
   font-size: 13px;
   text-transform: uppercase;
-  /* margin: 0 40px 0 0; */
+  color: #f77c96;
   text-align: right;
 }
 
-/* HEADER */
+/* SOCIAL */
 
-
-
-/* .homeLinks {
+.socialLinks {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-} */
+  margin: 0;
+}
+
+.socialLink {
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.socialIcon {
+  width: 40%;
+}
+
 
 /* OTHER */
-
-
-.homePortrait {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.homePortrait:hover {
-  content: url('https://i.imgur.com/4HAWH3s.jpg');
-}
 
 .homeReviews {
   width: 80%
