--- a/client/src/App.css
+++ b/client/src/App.css
@@ -61,22 +61,20 @@ body {
 .homePortraitDiv {
   grid-column: 3 / span 1;
   grid-row: first / span 2;
-}
-
-.homePortrait {
   background-image: url('https://i.imgur.com/TzWJA4e.jpeg');
-  width: 100%;
-  height: 100%;
+  width: 101%;
+  height: 101%;
   background-size: cover;
+  background-position: center;
   transition: .2s;
   background-color: #061a1b;
-  border: none;
-  box-sizing: border-box
+  box-sizing: border-box;
 }
 
-.homePortrait:hover {
+.homePortraitDiv:hover {
   background-image: url('https://i.imgur.com/4HAWH3s.jpg');
   transition: .2s;
+  cursor: pointer
 }
 
 .homeServicesDiv {
@@ -599,16 +597,16 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%
+  height: 100%;
+  overflow-y: auto;
 }
 
 .dailyCardImage {
-  width: 75%
+  width: 75%;
 }
 
 .dailyCardText {
   width: 75%;
-  /* margin: 20px 0 0 0; */
   margin: 0;
   font-family: "barlow";
   text-align: justify;
