ready to deploy

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,25 +23,27 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-size: 2.6vw;
 }
 
 .headerDrop {
   margin: -20px 0 0 0;
   height: 30%;
-  z-index: 1;
+  z-index: 99;
   border-radius: 50px;
 }
 
 .homeLink {
   font-family: 'Moon Dance', cursive;
-  font-size: 90px;
-  margin: 250px 0 0 0;
+  /* font-size: 90px; */
+  margin: 300px 0 0 0;
 }
 
 .headerLinks {
   display: flex;
   justify-content: center;
-  width: 100%
+  width: 100%;
+  font-size: 16px;
 }
 
 .headerLink {
@@ -185,7 +187,6 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* box-shadow: inset 0px 0px 0px 10px white; */
 }
 
 .homeRetrogradeDiv {
