fixed about link

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -315,7 +315,7 @@ body {
   text-align: justify;
   padding: 20px 100px 0 100px;
   color: #061a1b;
-  margin: 0;
+  padding: 10px 0;
 }
 
 .pagePic {
