--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,14 +11,14 @@ body {
 
 .header {
   /* background-image: url('https://i.imgur.com/Sk4GwKE.jpg'); */
-  background-color: #061a1b;
+  background-color: #a9bba6;
   grid-column: 1 / span 2;
   grid-row: first / span 1;
   width: 100%;
   height: 100%;
   background-size: cover;
   /* background-color: #061a1b; */
-  color: white;
+  color:#f0e6be;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -48,7 +48,7 @@ body {
 
 .headerLink {
   text-decoration: none;
-  color: white;
+  color:#324e5a;
   margin: 23px;
   font-family: 'Barlow';
   transition: .2s;
@@ -56,7 +56,7 @@ body {
 
 .headerLink:hover {
   /* letter-spacing: 5px; */
-  color: #f77c96;
+  color:#f0e6be;
   transition: .2s
 }
 
@@ -193,8 +193,9 @@ body {
 .homeRetrogradeDiv {
   grid-column: 1 / span 2;
   grid-row: fifth / span 1;
-  background-color: #f77c96;
+  background-color: #b54338;
   font-family: "barlow";
+  font-size: 20px;
   color: white;
   display: flex;
   flex-direction: column;
@@ -205,7 +206,7 @@ body {
 .homeSocialDiv {
   grid-column: 3 / span 2;
   grid-row: fifth / span 1;
-  background-color: white;
+  background-color:#f0e6be;
   font-family: "barlow";
   color: black;
   display: flex;
@@ -512,7 +513,6 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 1px solid white;
   height: 100%;
   box-sizing: border-box;
 }
@@ -526,20 +526,18 @@ body {
   width: 100%;
   height: 7em;
   border: none;
-  background-color: #061a1b;
-  color: white;
-  font-family: "Barlow", cursive;
-  font-size: 20px;
+  color: #f0e6be;
+  font-family: "Amarante", cursive;
+  font-size: 30px;
   text-transform: uppercase;
-  border: 1px solid white;
   z-index: 2;
   transition: .2s;
 }
 
 .signButton:hover {
-  letter-spacing: 5px;
+  letter-spacing: 15px;
+  color: #f0e6be8a;
   transition: .2s;
-  color: #f77c96
 }
 
 @media only screen and (max-width: 1220px) {
@@ -559,9 +557,8 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #061a1b;
+  background-color:#667a86;
   z-index: 3;
-  border: 2px solid white;
   box-sizing: border-box;
 }
 
@@ -581,7 +578,7 @@ body {
 .horoscopeDescription {
   font-family: "barlow";
   text-align: justify;
-  font-size: 20px; 
+  font-size: 30px; 
   color: white;
 }
 
@@ -646,21 +643,24 @@ body {
   align-items: center;
   transform: translate(-50%, -50%);
   z-index: 4;
+  color: #324e5a;
 }
 
 .dailyCardName {
   font-family: "Amarante";
   font-size: 70px;
+  line-height: 50px;
+  color: #872a22;
   margin: 0;
 }
 
 .dailyCardButton {
-  background-color:#f77c96;
+  background-color:#324e5a;
   color: white;
   border: none;
   font-family: "Amarante";
   font-size: 20px;
-  padding: 10px;
+  padding: 20px;
 }
 
 .dailyCardImage {
