--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,7 +11,7 @@ body {
 
 .header {
   /* background-image: url('https://i.imgur.com/Sk4GwKE.jpg'); */
-  background-color: #a9bba6;
+  background-color:#324e5a;
   grid-column: 1 / span 2;
   grid-row: first / span 1;
   width: 100%;
@@ -182,7 +182,7 @@ body {
 .homeReviewDiv {
   grid-column: 4 / span 1;
   grid-row: third / span 2;
-  background-color: #061a1b;
+  background-color:#324e5a;
   color: white;
   display: flex;
   flex-direction: column;
@@ -201,6 +201,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 100%;
+  width: 100%;
 }
 
 .homeSocialDiv {
@@ -768,5 +770,27 @@ body {
   color: white;
   background-color:#061a1b;
 }
+
+.retrogradeQuestion {
+  position: relative;
+  white-space: nowrap;
+  overflow: hidden;
+  animation: marquee 10s linear infinite;
+  display: inline-block;
+}
+
+/* @keyframes marquee {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.retrogradeQuestion span{
+  display: inline-block;
+  padding-right: 100%;
+} */
 
 /* ///////////// */
