--- a/client/src/App.css
+++ b/client/src/App.css
@@ -337,12 +337,13 @@ body {
 .cardsPagePic {
   grid-column: 1 / span 2;
   grid-row: second / span 3;
-  background-color: #872a22;
+  background-color: #a9bba6;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  max-height: 100%;
+  max-width: 100%
 }
 
 .cardPagePic {
@@ -356,7 +357,7 @@ body {
 }
 
 .cardPageImage {
-  width: 250%;
+  width: 50%;
   border-radius: 20px;
 }
 
@@ -368,18 +369,23 @@ body {
   padding: 20px;
 }
 
+.cardPageName {
+  margin: 5px 0 0 0;
+  font-family: Amarante;
+  font-size: 30px;
+  color:#324e5a;
+}
+
 .cardsPageInfo {
   grid-column: 3 / span 2;
   grid-row: first / span 4;
-  background-color: #a9bba6;
+  background-color: #f0e6be;
   overflow-y: auto;
   padding: 0 20px;
-  /* width: 100%;
-  height: 100%; */
 }
 
 .pageRetrogradeDiv {
-  grid-column: 1 / span 2;
+  grid-column: 3 / span 2;
   grid-row: fifth / span 1;
   background-color: #b54338;
   font-family: "barlow";
@@ -391,7 +397,7 @@ body {
 }
 
 .pageSocialDiv {
-  grid-column: 3 / span 2;
+  grid-column: 1 / span 2;
   grid-row: fifth / span 1;
   display: flex;
   flex-direction: column;
@@ -449,7 +455,7 @@ body {
   }
 
   .cardPageImage {
-    width: 410%;
+    width: 80%;
     border-radius: 20px;
   }
 
@@ -510,10 +516,6 @@ body {
     grid-column: 1 / span 4;
     grid-row: sixth / span 1;
   }
-
-  /* .cardPageImage {
-    width: 50%
-  } */
 
   /* SERVICES */
 
@@ -783,12 +785,13 @@ body {
   width: 80%
 }
 
-.allCardsCard {
-  width: 20%;
+.allCardsDiv {
+  /* width: 20%; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 100%;
 }
 
 .pagePic {
