--- a/client/src/App.css
+++ b/client/src/App.css
@@ -354,6 +354,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-width: 100%;
+  max-height: 100%
 }
 
 .cardPageImage {
@@ -484,6 +486,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-width: 100%;
+    max-height: 100%
   }
 
   .pageAbout {
@@ -811,6 +815,8 @@ body {
   align-items: center;
   height: 100%;
   object-fit: cover;
+  max-width: 100%;
+  max-height: 100%
 }
 
 .backButton {
